--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "1.0.0",
   "description": "This project was bootstrapped with Fastify-CLI.",
   "main": "app.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node build/server.js",
     "dev": "tsx watch src/server.ts",
-    "poststart": "rimraf build",
-    "lint": "eslint ."
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -30,14 +28,17 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^30.2.0",
     "prettier": "^3.7.3",
     "rimraf": "^6.1.2",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
