--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "test"
   },
   "scripts": {
-    "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node build/server.js",
-    "dev": "tsx watch src/server.ts",
-    "poststart": "rimraf build",
-    "lint": "eslint ."
-  },
+  "dev": "tsx watch src/server.ts",
+  "build": "tsc",
+  "start": "node dist/server.js",
+  "lint": "eslint .",
+  "lint:fix": "eslint . --fix",
+  "format": "prettier --write .",
+  "test": "jest"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
